--- a/style.css
+++ b/style.css
@@ -120,45 +120,59 @@ section {
 }
 
 .hero {
-  position: relative;
-  width: 100vw;          /* 画面幅いっぱい */
-  height: 100%;         /* 固定高さ */
-  max-width: 100%;       /* これで親の幅超え防止 */
-  overflow: hidden; 
+    position: relative;
+    width: 100vw;
+    /* 画面幅いっぱい */
+    height: 100vh;
+    /* 固定高さ */
+    overflow: hidden;
 }
+
 .slideshow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
 }
 
 .slide {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+    z-index: 1;
+
 }
 
 .slide.active {
-  opacity: 1;
+    opacity: 1;
 }
 
-.hero img{
-  position: relative;
-  width: 100vw;
-  z-index: 1;
-  /* background-color: transparent; */
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2; /* スライドより前面に */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none; /* ロゴの上でのクリックを透過 */
+}
 
+
+.hero-overlay img {
+  width: 60%;
+  max-width: 300px;
+  height: auto;
 }
 
 .concept {
