--- a/style.css
+++ b/style.css
@@ -129,19 +129,25 @@ section {
 
 /* ヒーロースライドショー */
 .hero {
+  /* position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; */
+  padding: 0 ;
+}
+
+.hero-container {
   position: relative;
-  width: 100vw;
-  height: 100vh;
-  overflow: hidden;
+  width: 90%;
+  max-width: 600px; /* 他の .container と同じ最大幅 */
+  margin: 0 auto;
 }
 
 .slideshow {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
   width: 100%;
-  height: 100%;
-  z-index: 1;
+  padding-top: 56.25%;
+  /* z-index: 1; */
   overflow: hidden;
 }
 
